--- a/web/templates/_base.html
+++ b/web/templates/_base.html
@@ -15,32 +15,32 @@
         <title>ALVIN and SUPERBAND</title>
 
         <!-- For favicon png -->
-		<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
+		<link rel="shortcut icon" type="image/icon" href="/static/assets/logo/favicon.png"/>
        
         <!--font-awesome.min.css-->
-        <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+        <link rel="stylesheet" href="/static/assets/css/font-awesome.min.css">
 
 		<!--flat icon css-->
-		<link rel="stylesheet" href="assets/css/flaticon.css">
+		<link rel="stylesheet" href="/static/assets/css/flaticon.css">
 
 		<!--animate.css-->
-        <link rel="stylesheet" href="assets/css/animate.css">
+        <link rel="stylesheet" href="/static/assets/css/animate.css">
 
         <!--owl.carousel.css-->
-        <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-		<link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+        <link rel="stylesheet" href="/static/assets/css/owl.carousel.min.css">
+		<link rel="stylesheet" href="/static/assets/css/owl.theme.default.min.css">
 		
         <!--bootstrap.min.css-->
-        <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/static/assets/css/bootstrap.min.css">
 		
 		<!-- bootsnav -->
-		<link rel="stylesheet" href="assets/css/bootsnav.css" >	
+		<link rel="stylesheet" href="/static/assets/css/bootsnav.css" >	
         
         <!--style.css-->
-        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="/static/assets/css/style.css">
         
         <!--responsive.css-->
-        <link rel="stylesheet" href="assets/css/responsive.css">
+        <link rel="stylesheet" href="/static/assets/css/responsive.css">
     </head>
 
     <body>
@@ -57,7 +57,7 @@
 			                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
 			                    <i class="fa fa-bars"></i>
 			                </button>
-			                <a class="navbar-brand" href="index.html">ALVIN and SUPERBAND</a>
+			                <a class="navbar-brand" href="">ALVIN and SUPERBAND</a>
 			            </div><!--/.navbar-header-->
 			            <!-- End Header Navigation -->
 
