--- a/web/templates/1.html
+++ b/web/templates/1.html
@@ -1,88 +1,5 @@
-{% load static %}
-<!doctype html>
-<html class="no-js" lang="ko">
-    <head>
-        <!-- meta data -->
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
-        <!--font-family-->
-		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;subset=devanagari,latin-ext" rel="stylesheet">
-        
-        <!-- title of site -->
-        <title>ALVIN and SUPERBAND</title>
-
-        <!-- For favicon png -->
-		<link rel="shortcut icon" type="image/icon" href="/static/assets/logo/favicon.png"/>
-       
-        <!--font-awesome.min.css-->
-        <link rel="stylesheet" href="/static/assets/css/font-awesome.min.css">
-
-		<!--flat icon css-->
-		<link rel="stylesheet" href="/static/assets/css/flaticon.css">
-
-		<!--animate.css-->
-        <link rel="stylesheet" href="/static/assets/css/animate.css">
-
-        <!--owl.carousel.css-->
-        <link rel="stylesheet" href="/static/assets/css/owl.carousel.min.css">
-		<link rel="stylesheet" href="/static/assets/css/owl.theme.default.min.css">
-		
-        <!--bootstrap.min.css-->
-        <link rel="stylesheet" href="/static/assets/css/bootstrap.min.css">
-		
-		<!-- bootsnav -->
-		<link rel="stylesheet" href="/static/assets/css/bootsnav.css" >	
-        
-        <!--style.css-->
-        <link rel="stylesheet" href="/static/assets/css/style.css">
-        
-        <!--responsive.css-->
-        <link rel="stylesheet" href="/static/assets/css/responsive.css">
-    </head>
-
-    <body>
-        		<!-- top-area Start -->
-		<header class="top-area">
-			<div class="header-area">
-				<!-- Start Navigation -->
-			    <nav class="navbar navbar-default bootsnav navbar-fixed dark no-background">
-
-			        <div class="container">
-
-			            <!-- Start Header Navigation -->
-			            <div class="navbar-header">
-			                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
-			                    <i class="fa fa-bars"></i>
-			                </button>
-			                <a class="navbar-brand" href="">ALVIN and SUPERBAND</a>
-			            </div><!--/.navbar-header-->
-			            <!-- End Header Navigation -->
-
-			            <!-- Collect the nav links, forms, and other content for toggling -->
-			            <div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
-			                <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
-			                <li class=" smooth-menu active"></li>
-			                    <li class="smooth-menu"><a href="{%url 'nature:typhoon' %}">태풍</a></li>
-			                    <li class="smooth-menu"><a href="{%url 'nature:earthquake' %}">지진</a></li>
-			                    <li class="smooth-menu"><a href="{%url 'nature:landslide' %}">산사태</a></li>
-			                    <li class="smooth-menu"><a href="{%url 'nature:fires' %}">산불</a></li>
-			                    <li class="smooth-menu"><a href="{%url 'nature:post' %}">자유게시판</a></li>
-			                   
-			                </ul><!--/.nav -->
-			            </div><!-- /.navbar-collapse -->
-			        </div><!--/.container-->
-			    </nav><!--/nav-->
-			    <!-- End Navigation -->
-			</div><!--/.header-area-->
-
-		    <div class="clearfix"></div>
-
-		</header><!-- /.top-area-->
-		<!-- top-area End -->
-
+{%extends 'base.html'%}
+{% block content %}
 	
 		<!--welcome-hero start -->
 		<section id="welcome-hero" class="welcome-hero">
@@ -249,7 +166,6 @@
         
         <!--Custom JS-->
         <script src="/static/assets/js/custom.js"></script>
-        
-    </body>
+{%endblock%}
 	
 </html>
